# demo-ai-pipeline

./: .gitignore  PLAN.md  README.md  config.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: main.py  schema.py  service.py
dataset/: ml_raw_data.csv
dataset/golden-data/raw/: heart_disease_risk_2026.csv
notebooks/: eda.ipynb  training.ipynb
scripts/: data-preprocess.py  training.py
tests/: test_golden_evaluation.py  test_micro_pipeline.py
