[project]
name = "mental-health-survey"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "matplotlib>=3.11.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "wandb>=0.28.1",
]
